--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Ricardo Longa"
 theme = "hugo-future-imperfect"
 preserveTaxonomyNames = true
 paginate = 3
-googleAnalytics = ""
+googleAnalytics = "UA-72326601-2"
 disqusShortname = "ricardolonga"
 
 [params]
